--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -9,7 +9,7 @@ model-paths: ["models"]
 # seed-paths: ["seeds"]
 test-paths: ["tests"]
 analysis-paths: ["analysis"]
-macro-paths: ["macros"]
+# macro-paths: ["macros"]
 
 target-path: "target"
 clean-targets:
@@ -25,13 +25,49 @@ require-dbt-version: [">=1.0.0", "<2.0.0"]
 
 models:
   aether_energy_analytics:
-    materialized: table  # Default materialization for models in this project
-    +docs:
-      node_color: 'gold'  # Custom documentation color for all models in this project
+    materialized: table
     staging:
-      materialized: view  # Materialization for staging models (can be overridden per model)
+      materialized: view
       +docs:
-        node_color: 'silver'  # Custom documentation color for staging models
+        node_color: 'silver'
+    +docs:
+      node_color: 'gold'
+
+
+# name: 'aether_energy_analytics'
+
+# config-version: 2
+# version: '0.1'
+
+# profile: 'aether_energy_analytics'
+
+# model-paths: ["models"]
+# # seed-paths: ["seeds"]
+# test-paths: ["tests"]
+# analysis-paths: ["analysis"]
+# # macro-paths: ["macros"]
+
+# target-path: "target"
+# clean-targets:
+#     - "target"
+#     - "dbt_modules"
+#     - "logs"
+
+# require-dbt-version: [">=1.0.0", "<2.0.0"]
+
+# # seeds: 
+# #   +docs:
+# #     node_color: '#cd7f32'
+
+# models:
+#   aether_energy_analytics:
+#     materialized: table  # Default materialization for models in this project
+#     +docs:
+#       node_color: 'gold'  # Custom documentation color for all models in this project
+#     staging:
+#       materialized: view  # Materialization for staging models (can be overridden per model)
+#       +docs:
+#         node_color: 'silver'  # Custom documentation color for staging models
         
 # models:
 #   aether_energy_analytics:
