Tweaking to get the models to work

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -9,7 +9,7 @@ model-paths: ["models"]
 # seed-paths: ["seeds"]
 test-paths: ["tests"]
 analysis-paths: ["analysis"]
-# macro-paths: ["macros"]
+macro-paths: ["macros"]
 
 target-path: "target"
 clean-targets:
