--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@ dbt_packages/
 dbt_modules/
 logs/
 **/.DS_Store
-.user.yml
+# .user.yml
 venv/
 env/
-**/*.duckdb
-**/*.duckdb.wal
+# **/*.duckdb
+# **/*.duckdb.wal
 .vscode/
 
 
