--- a/requirements.txt
+++ b/requirements.txt
@@ -52,8 +52,9 @@ dbt-extractor==0.5.1
     # via dbt-core
 dbt-semantic-interfaces==0.4.4
     # via dbt-core
-diff-cover==8.0.3
+diff-cover==9.1.0
     # via sqlfluff
+    # diff-cover==8.0.3
 duckcli==0.2.1
     # via -r requirements.in
 duckdb==0.10.0
