--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ dbt-semantic-interfaces==0.4.4
     # via dbt-core
 diff-cover==9.1.0
     # via sqlfluff
-    # diff-cover==8.0.3
+    # diff-cover#==8.0.3
 duckcli==0.2.1
     # via -r requirements.in
 duckdb==0.10.0
