--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -2,7 +2,7 @@ version: 2
 
 sources:
   - name: aether_energy_analytics
-    schema: main  # which schema am I referring to here???
+    schema: main 
     tables:
       - name: customer_feedback
       - name: customers
